updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 DebugWindowFramework/DebugWindow/DebugWindow.xcodeproj
 DebugWindow/Carthage
 Cartfile.resolved
+DebugWindow/DebugWindowExample.xcodeproj/project.xcworkspace/xcuserdata
